--- a/README
+++ b/README
@@ -2,4 +2,4 @@ The following project focuses on the process of manipulating a dataset of medica
 
 You can find here the workflow and the report of it. 
 To see the workflow it is necessary to use the open source knime program.
-You can also find the datasets utilized.
+You can also find utilized datasets.
